# cherno-cpp

./: README.md
1-HellowWorld/: .kateproject  README.md  build.sh
1-HellowWorld/src/: Main.cpp  Math.cpp
TemplateProject/: CMakeLists.txt  build.sh
TemplateProject/src/: Main.cpp
